tests/NormalTests/paczka1/small_fuzzy/80041028.err
Error in line 9: di1EhkeVMo3 S77 23,78
Error in line 4: azHO6JcDXX4 S77 86,8
